--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -7,6 +7,8 @@ metadata:
   # annotations:
   #   github.com/project-slug: backstage/backstage
   #   backstage.io/techdocs-ref: dir:.
+  annotations:
+    backstage.io/techdocs-ref: dir:.
 spec:
   type: library
   owner: user:hyt-sasaki
